<?xml version="0.0.1"?>
<package format="2">
  <name>node_monitoring</name>
  <version>0.0.1</version>
  <description>The node_monitoring package</description>

  <maintainer email="andreluisfranca98@gmail.com">Andre Luis Frana</maintainer>
  
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/CeDRI_IPB/node_monitoring</url>
  
  <author email="andreluisfranca98@gmail.com">Andre Luis Frana</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
